--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -1,14 +1,14 @@
 ---
-title: 'HRP 262: Final'
+title: 'Paper from code'
 author: "Stylianos Serghiou"
 date: '`r format(Sys.time(), "%d/%m/%Y")`'
 output:
   prettydoc::html_pretty:
+    # no cold_folding available
     theme: hpstr      # or: architect; https://github.com/yixuan/prettydoc
     highlight: github # or: vignette
     toc: TRUE         # no toc_float available
     df_print: kable   # obviates %>% kable; does not replace styling though
-    # no cold_folding available
   tufte::tufte_handout: default
   pdf_document:
     highlight: tango
@@ -70,24 +70,24 @@ library(ggplot2)
 library(magrittr)
 
 
-
 ######### knitr
 
 # Define chunk options
-opts_chunk$set(echo = TRUE
-               , cache     = FALSE      # if TRUE, no need to rerun chunks
-               #, cache.lazy = TRUE     # use when have big objects (>1 GB)
-               , cache.comments = FALSE # do not rebuild if comments change
-               , tidy      = FALSE      # can play with this
-               , warning   = FALSE 
-               , message   = FALSE
-               , comment   = NA
-               , fig.align = "center"
-               , fig.width = 7
-               # , fig.path  = "Figs/" # export all figures to dir Figs
-               , linewidth = 91)
-
-opts_knit$set(width = 75)
+opts_chunk$set(
+  echo = T,
+  cache = F,  # if TRUE, no need to rerun chunks
+  # cache.lazy = TRUE,  # use with big objects (>1 GB)
+  cache.comments = F,  # do not rebuild if comments change
+  tidy = F,  # can play with this
+  warning = F, 
+  message = F,
+  comment = NA,
+  fig.align = "center",
+  fig.width = 7,
+  fig.path = "Figs/",  # export all figures to dir Figs
+  linewidth = 91,
+  width = 75
+)
 
 # Initiatialize hook
 hook_output = knit_hooks$get("output")
@@ -106,31 +106,58 @@ knit_hooks$set(output = function(x, options) {
   hook_output(x, options)
 })
 
+# Times a chunk and prints the time it took to run it under the chunk
+# To time a chunk, include in the chunk options: {r my_chunk, timeit=TRUE}
+knitr::knit_hooks$set(timeit = local({
+  now = NULL
+  function(before, options) {
+    if (before) {
+      now <<- Sys.time()
+    } else {
+      res = difftime(Sys.time(), now)
+      now <<- NULL
+      # use options$label if you want the chunk label as well
+      paste('Time for this code chunk:', as.character(res))
+    }
+  }})
+)
+
 # For more knitr options visit: https://yihui.name/knitr/options/
 # and his github page: https://github.com/yihui/knitr-examples
 
 
-
 ######### kableExtra
 
-options(knitr.kable.NA = ''  # replace NAs in tables with blank
-        , digits = 3)          # round digits (doesn't work without this here!)
+options(
+  knitr.kable.NA = '',  # replace NAs in tables with blank
+  digits = 3  # round digits (doesn't work without this here!)
+)
 
 ## Example use
 # data.frame(x = c(1,2,3), y = c(4,5,6), z = c(7,8,9)) %>% 
 #   kable(booktabs = T) %>% kable_styling()
 
 # Function to simplify table styling
-sable <- function(tab, escape = T, full_width = F, drop = F) {
+sable <- function(tab, escape = T, full_width = F, drop = F, font_size = 12) {
   if (drop) {
     tab %>%
       kable(escape = escape, booktabs = T) %>%
       collapse_rows(valign = "top") %>% 
-      kable_styling("striped", position = "center", full_width = full_width)
+      kable_styling(
+        "striped", 
+        position = "center", 
+        full_width = full_width, 
+        font_size = font_size
+      )
   } else {
     tab %>%
       kable(escape = escape, booktabs = T) %>%
-      kable_styling("striped", position = "center", full_width = full_width)
+      kable_styling(
+        "striped", 
+        position = "center", 
+        full_width = full_width,
+        font_size = font_size
+      )
   }
 }
 
@@ -140,27 +167,27 @@ sable <- function(tab, escape = T, full_width = F, drop = F) {
 # Loading kableExtra nullifies any styling applied by df_table: kable in the preamble - if you are content with standard formatting, DO NOT load kableExtra
 
 
-
 #########  ggplot2
 
 # Set up preferred theme in ggplot2
 my_theme <- 
   # this and theme_minimal() are my favorite
   theme_light() +  
-  theme(plot.title   = element_text(face = "bold"),
-        legend.title = element_text(face = "bold"),
-        # Avoid borders
-        legend.key   = element_rect(colour = NA, fill = NA),  
-        axis.text.x  = element_text(margin = margin(b = 10)),
-        axis.text.y  = element_text(margin = margin(l = 10)),
-        axis.title.y = element_text(colour = "grey25"),
-        axis.title.x = element_text(colour = "grey25"))
+  theme(
+    axis.ticks = element_blank(),
+    axis.title = element_text(face = "bold"),
+    axis.title.x = element_text(margin = margin(t = 15)),
+    axis.title.y  = element_text(margin = margin(r = 7)),
+    legend.key = element_rect(colour = NA, fill = NA),  # Avoid borders
+    panel.border = element_blank(), 
+    text = element_text(color = "grey20"),
+    title = element_text(face = "bold")
+  )
 
 # Make the above theme the default theme
 original_theme <- theme_set(my_theme)
 
 # Use ggsave to save plots after plotting - this reduces size dramatically
-
 
 
 ######### Tabbed sections
@@ -172,7 +199,6 @@ original_theme <- theme_set(my_theme)
 ### By Product
 
 
-
 ######### Update package
 
 # To update the package use:
@@ -182,56 +208,265 @@ original_theme <- theme_set(my_theme)
 
 # Setup {.tabset}
 
+## Imports
+
 ```{r setup}
 # Load packages
-library(tidyverse)
-library(tidymodels)
 library(magrittr)
 library(readxl)
+library(tidybayes)
+library(tidyverse)
+library(tidymodels)
 
-# Import data
+# Source code
 ```
 
-I hereby assume that we want to marginalize the unseen latent variable $Z_i$ out of the likelihood $p(Y \mid \mu, Z)$. Let us first take the expectation across all values of $Z_{i\cdot}$ for each $Y_i$:
 
-$$
-\begin{aligned}
-E_{Z_{i\cdot}}(Y_i \mid \mu, Z_{i\cdot}) &= \sum_{j=1}^k \: p(Y_i \mid \mu_j,  Z_{ij}) \:
-p(Z_j) \\
- &= \sum_{j=1}^k \: N(\mu_j, \sigma^2_j) \: \pi_j \\
- &= \pi_j \: N(\mu_j, \sigma^2_j)
-\end{aligned}
-$$
+## Configurations
 
-***
+```{r}
+# Source locations
+src_dirname <- "../../data/tidy/"
+src_basename <- "analytic-dataset_2023-03-11.csv"
 
-# Question 1
+# Destination locations
+dst_dirname <- paste0("../../outputs/")
 
+# Analysis name
+ANALYSIS_NAME <- "data-analysis"
 
-
-***
-
-# Question 2
-
-
-
-***
-
-# Save
-
-```{r save}
-# Save
-save(list = ls(), file = "output.RData")
+# Should the Dockerfile be automatically updated?
+UPDATE_DOCKERFILE <- FALSE
 ```
 
-***
+
+## Parameters
+
+```{r}
+CONTINUOUS_VARIABLES <- c(
+  "Heart rate (bpm)" = "Var1"
+)
+```
+
+
+## Outputs
+
+Create lists.
+
+```{r}
+plots <- list()
+tables <- list()
+models <- list()
+```
+
+
+## Functions
+
+R utils.
+
+```{r}
+
+```
+
+
+Data analysis utils.
+
+```{r}
+
+```
+
+
+------------------------------------------------------------------------
+
+# Read
+
+```{r}
+dat_ <- read_csv("")
+```
+
+
+------------------------------------------------------------------------
+
+# Conform
+
+## Dataset1
+
+```{r}
+dat <- dat_
+```
+
+
+------------------------------------------------------------------------
+
+# Compute
+
+```{r}
+
+```
+
+
+------------------------------------------------------------------------
+
+# Write
+
+## Setup
+
+Create the necessary directories.
+
+```{r}
+# Get today's date
+today <- Sys.Date()
+today <- format(today, "%Y-%m-%d")
+
+# Create folder names
+base_folder <- file.path(dst_dirname, ANALYSIS_NAME)
+date_folder <- file.path(dst_dirname, today)
+csv_folder <- file.path(date_folder, "csv")
+pdf_folder <- file.path(date_folder, "pdf")
+html_folder <- file.path(date_folder, "html")
+
+# Create folders
+dir.create(base_folder)
+dir.create(date_folder)
+dir.create(csv_folder)
+dir.create(pdf_folder)
+dir.create(html_folder)
+
+# Print folder names
+print(base_folder)
+print(date_folder)
+print(csv_folder)
+print(pdf_folder)
+print(html_folder)
+```
+
+
+## Figures
+
+Write all figures.
+
+```{r}
+# Save
+# ggsave(
+#   file.path(pdf_folder, "histogram_num_days.pdf"),
+#   plot = plots$histogram_num_days,
+#   width = 6,
+#   height = 6
+# )
+```
+
+```{r}
+# # Start graphic device
+# pdf(
+#   file = file.path(pdf_folder, "forest-plot_frequentist.pdf"),
+#   width = 10,
+#   height = 15
+# )
+# 
+# # Plot
+# plots$forest_plot_frequentist
+# 
+# # Shut down device
+# dev.off()
+```
+
+
+
+## Tables
+
+Write all tables.
+
+```{r}
+# # Arguments
+# df <- tables$desc_stats_cohorts_cv_prolaio
+# filepath_csv <- file.path(csv_folder, "desc-stats_by-cohort_cov.csv")
+# filepath_html <- file.path(html_folder, "desc-stats_by-cohort_cov.html")
+# 
+# # Save as CSV
+# write_csv(
+#   x = df,
+#   file = filepath_csv
+# )
+# 
+# # Save as HTML 
+# # - Save pdf does not work with webshot
+# # - It works with pagedown but not as pretty as desired
+# df %>%
+#   sable() %>% 
+#   kableExtra::save_kable(file = filepath_html)
+```
+
+
+## Data
+
+Write all data.
+
+```{r}
+# # Arguments
+# df <- study
+# filename <- paste0(ANALYSIS_NAME, "_", today, ".csv")
+# filepath_csv <- file.path(DST_BUCKET, dst_dirname_data, filename)
+# 
+# # Save as CSV
+# write_csv(
+#   x = df,
+#   file = filepath_csv
+# )
+```
+
+
+------------------------------------------------------------------------
+
+# Reproducibility
+
+## Linting and styling
+
+```{r}
+# Lint current file
+lintr::lint(rstudioapi::getSourceEditorContext()$path)
+
+# Style current file
+styler::style_file(
+  path = rstudioapi::getSourceEditorContext()$path,
+  style = styler::tidyverse_style()
+)
+```
+
+
+## Dependencies
+
+```{r}
+# Clean up project of libraries not in use
+renv::clean()
+
+# Update lock file with new packages
+renv::snapshot()
+```
+
+
+## Containerization
+
+```{r}
+# Only run this if option is set to TRUE
+if (UPDATE_DOCKERFILE) {
+  # Create a dockerfile from the session info
+  my_dockerfile <- containerit::dockerfile(from = sessionInfo(), env = ls())
+  # Write file
+  write(my_dockerfile, file = "~/Dockerfile")
+}
+
+print(my_dockerfile)
+```
+
+
+------------------------------------------------------------------------
 
 # Documentation {.tabset}
 
 ## Session Info
 
 ```{r session_info, echo=FALSE}
-print(sessionInfo(), locale = F)
+print(sessionInfo(), locale = FALSE)
 ```
 
 ## References
