BUGFIX: Remove parentheses from tidyverse_style()

--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -433,7 +433,7 @@ lintr::lint(rstudioapi::getSourceEditorContext()$path)
 # Style current file
 styler::style_file(
   path = rstudioapi::getSourceEditorContext()$path,
-  style = styler::tidyverse_style()
+  style = styler::tidyverse_style
 )
 ```
 
