MAINT: Remove magrittr dependency from Setup chunk

--- a/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/report/skeleton/skeleton.Rmd
@@ -71,7 +71,6 @@ library(knitr)
 library(rmdformats)
 library(kableExtra)
 library(ggplot2)
-library(magrittr)
 
 
 ######### knitr
@@ -98,7 +97,7 @@ hook_output <- knit_hooks$get("output")
 
 # Hook to wrap output text when it exceeds 'n' using linewidth
 knit_hooks$set(output = function(x, options) {
-  if (!is.null(n <- options$linewidth)) {
+  if (!is.null(n = options$linewidth)) {
     x <- knitr:::split_lines(x)
 
     # wrap lines wider than 'n'
@@ -145,9 +144,9 @@ options(
 sable <- function(tab, escape = TRUE, full_width = FALSE, drop = FALSE,
                   font_size = 12) {
   if (drop) {
-    tab %>%
-      kable(escape = escape, booktabs = TRUE) %>%
-      kableExtra::collapse_rows(valign = "top") %>%
+    tab |>
+      kable(escape = escape, booktabs = TRUE) |>
+      kableExtra::collapse_rows(valign = "top") |>
       kableExtra::kable_styling(
         "striped",
         position = "center",
@@ -155,8 +154,8 @@ sable <- function(tab, escape = TRUE, full_width = FALSE, drop = FALSE,
         font_size = font_size
       )
   } else {
-    tab %>%
-      kable(escape = escape, booktabs = TRUE) %>%
+    tab |>
+      kable(escape = escape, booktabs = TRUE) |>
       kableExtra::kable_styling(
         "striped",
         position = "center",
